# elasticsearch_tutor

./: .env  .gitignore  README.md  docker-compose.yml  docker-compose_start.sh  elastic_logs.txt  elastic_password.json  elastisearch_setup.sh  es.py  get_credentials.py  pyproject.toml  start_elasticsearch_kibana.sh
