[tool.poetry]
name = "elasticsearch-tutorial"
version = "0.1.0"
description = ""
authors = ["Svetlana <svet.karimova2012@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.14.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
